# rust-wasm-double-pendulum

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html.ejs  index.js  package-lock.json  package.json  style.css  webpack.config.js
.devcontainer/: devcontainer.json
planagent/: plan-genericSimulationContext.prompt.md
public/: bundle.js  index.html
src/: anim.rs  consts.rs  double_pendulum.rs  draw.rs  dynamics.rs  jsanim.rs  lib.rs  macros.rs  pendulum.rs  runner.rs  sim.rs  window.rs
